# emqx-neuron

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.cm4  README.md
build-check-cm4/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-check-cm4/config/: default_plugins.json
build-check-cm4/simulator/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-docker-opcua-e2e/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  neuron
build-docker-opcua-e2e/persistence/: sqlite.db
build-docker-opcua-e2e/simulator/: CTestTestfile.cmake  Makefile  modbus_simulator  modbus_tty_simulator
build-linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  neuron
build-linux/persistence/: sqlite.db  sqlite.db-shm  sqlite.db-wal
build-linux/simulator/: CTestTestfile.cmake  (+4 more)
build-native-cm4/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  neuron
build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-opcua/: CMakeCache.txt
build-opcua-native/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: opcua-oss-plugin.md  remote-server-build-guide-single-file.md  unlimited-node-tags.md
neuron-dashboard/: package.json  vue.config.js
plugins/opcua/: CMakeLists.txt  opcua.c
scripts/: build-arm64-image.sh  build-native-cm4.sh  cm4-one-command-setup.sh  deploy-cm4.sh  docker-opcua-e2e.sh  install-cm4-native-remote.sh  install-cm4-remote.sh  run-cm4-simulator.sh  upgrade-cm4-native-safe-remote.sh
(+330 files in other folders)
